# velvet-continuity-spine

./: .final-check  .gitignore  .recovery-sync-note  BRANCH_NOTE.md  CHANGELOG.md  CONTRIBUTING.md  PUBLIC_GHOST_CONTINUITY_PATCH_NOTES.md  README.md  RECOVERY_NOTE.md  RECOVERY_SEED.md  SECURITY.md  pyproject.toml
.recovery/: chunk00.b64  chunk01.b64  chunk03.b64
.recovery2/: part00.b64  part01.b64
continuity_spine/: memory_anchor.py
docs/: architecture.md  continuity_doctrine.md  cross_surface_memory.md  drift_recovery.md  ghost_system_continuity.md  identity_lineage.md  mechanical_proof.md  memory_record_contract.md  public_private_boundary.md  room_records.md
examples/: bind_surface.py  bridge_to_receipts.py  create_identity_record.py  detect_drift.py  record_ghost_run.py  record_room_state.py
schemas/: context_record.schema.json  continuity_receipt.schema.json  drift_event.schema.json  ghost_run_record.schema.json  identity_record.schema.json  surface_binding.schema.json
scripts/: ci_test_tail.py
tests/: test_000_python38_syntax.py  test_context_record.py  test_drift_detector.py  test_ghost_run.py  test_identity_record.py  test_lineage.py  test_memory_anchor.py  test_memory_index.py  test_proof_layer.py  test_receipt_bridge.py  test_recovery_hooks.py  test_spine.py  test_storage.py  test_surface_binding.py
velvet_continuity/: __init__.py  context_record.py  drift_detector.py  drift_event.py  ghost_run.py  identity.py  lineage.py  memory_index.py  proof_hashing.py  proof_records.py  proof_surface.py  proof_verify.py  receipt_bridge.py  recovery_hooks.py  (+4 more)
(+3 files in other folders)
